--- a/actividad float.html
+++ b/actividad float.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="with=device-width">
-	<title>Estructuras/Layouts</title>
+	<title>Estructuras con inline block</title>
 </head>
 <style>
 	/* Aquí va el código CSS */
@@ -34,13 +34,6 @@
         margin-bottom: 16px;
     }
 
-    .cleartix:after {
-    content: "";
-    visibility: hidden;
-    display: block;
-    height: 0;
-    clear: both
-    }
 
     footer{
         width: 100%;
@@ -54,23 +47,24 @@
             height:  200px;
     }
         nav{
-            float: left;
+            display: inline-block;
             width: 20%;
             height: 600px;
+            vertical-align: text-top;
     }
-
         .column{
-            width: 78%;
-            float:left; 
+            width: 77%;
+            display: inline-block; 
             margin-left: 2%;
             height: auto;
+            vertical-align: text-top;
     }
         header{
-            float: left;
+            display: inline-block;
             width: 100%;
         }
         section{
-            float: left;
+            display: inline-block;
             width: 100%;
         }
         .column section{ 
@@ -128,7 +122,7 @@ footer {
 </style>
 
 <body>
-    <div class="container cleartix">
+    <div class="container">
         <nav> 
             <h1>Nav</h1>
         </nav>
